# Parity-HSM

./: .gitignore  CMakeLists.txt  data.txt  keg-gen.cnf  pub.der  run.sh
config/: config.json
include/: pkcs11_state.h  pkcs11_wrapper.h
include/crypto/: aes.h  rsa.h  xor.h
include/parity_hsm/: common.hpp  secure_memory.h  vault.h
include/storage/: disk.h
scripts/: _pkcs11_validation_common.sh  key-pair-gen.sh  pkcs11_validation_harness.cpp  validate_pkcs11_all.sh  validate_pkcs11_authentication.sh  validate_pkcs11_compliance.sh  validate_pkcs11_concurrency.sh  validate_pkcs11_encrypt_decrypt.sh  validate_pkcs11_export.sh  validate_pkcs11_general.sh  validate_pkcs11_initialize_token.sh  validate_pkcs11_key_management.sh  validate_pkcs11_negative.sh  validate_pkcs11_object_management.sh  validate_pkcs11_object_search.sh  validate_pkcs11_partitions.sh  validate_pkcs11_sessions.sh  validate_pkcs11_sign_verify.sh  validate_pkcs11_slot_token.sh
src/: main.cpp
src/core/: hsm.cpp  secure_memory.cpp  vault.cpp
src/crypto/: aes.cpp  rsa.cpp  xor.cpp
src/pkcs11/: crypto.cpp  object.cpp  pkcs11.cpp  session.cpp
src/storage/: disk.cpp  usb.cpp
src/token/: epass.cpp
